samples/_failures_safe/1761261593_7fff91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f7fdca86.c: In function ‘main’:
./samples/SAFE/__tmp_f7fdca86.c:140:42: error: expected ‘;’ at end of input
  140 |     for (size_t i = 0; i < compressed_len
      |                                          ^
      |                                          ;
./samples/SAFE/__tmp_f7fdca86.c:140:5: error: expected declaration or statement at end of input
  140 |     for (size_t i = 0; i < compressed_len
      |     ^~~
